fix(modal): set button height to avoid overflow content changing sizes

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -249,6 +249,7 @@
     button.#{$prefix}--btn {
       max-width: none;
       width: 50%;
+      height: 4rem;
       margin: 0;
       padding-top: 1rem;
       padding-bottom: 2rem;
